--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -80,7 +80,7 @@ jobs:
         shell: bash
         run: pixi run nonpy-format-check
       # Check formatting of Jupyter Notebooks in the tutorials folder
-      - name: Convert tutorial scripts to notebooks and check formatting
+      - name: Prepare notebooks and check formatting
         id: check_notebooks_formatting
         continue-on-error: true
         shell: bash
