--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -1,21 +1,14 @@
-# This workflow creates an automated release PR from `develop` into `master`.
+# This workflow creates an automated release PR from a source branch into the default branch.
 #
 # Usage:
 #   - Triggered manually via workflow_dispatch.
-#   - Creates a PR titled "Release: merge develop into master".
-#   - Adds the label "[maintainer] auto-pull-request" so it is excluded from changelogs.
+#   - Creates a PR titled "Release: merge <source> into <default>".
+#   - Adds the label "[bot] pull request" so it is excluded from changelogs.
 #   - The PR body makes clear that this is automation only (no review needed).
-#
-# Required repo config:
-# https://github.com/organizations/easyscience/settings/secrets/actions
-# https://github.com/organizations/easyscience/settings/variables/actions
-# - Actions secret:   EASYSCIENCE_APP_KEY  (GitHub App private key PEM)
-# - Actions variable: EASYSCIENCE_APP_ID   (GitHub App ID)
 
-name: Release PR (develop/feature -> master)
+name: 'Release PR (<source> → <default>)'
 
 on:
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
       source_branch:
@@ -28,7 +21,6 @@ permissions:
   contents: read
   pull-requests: write
 
-# Set the environment variables to be used in all jobs defined in this workflow
 env:
   DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
   SOURCE_BRANCH: ${{ inputs.source_branch || 'develop' }}
@@ -50,6 +42,8 @@ jobs:
           private-key: ${{ secrets.EASYSCIENCE_APP_KEY }}
 
       - name: Create PR from ${{ env.SOURCE_BRANCH }} to ${{ env.DEFAULT_BRANCH }}
+        env:
+          GH_TOKEN: ${{ steps.bot.outputs.token }}
         run: |
           gh pr create \
             --base ${{ env.DEFAULT_BRANCH }} \
@@ -59,5 +53,3 @@ jobs:
             --body "This PR is created automatically to trigger the release pipeline. It merges the accumulated changes from \`${{ env.SOURCE_BRANCH }}\` into \`${{ env.DEFAULT_BRANCH }}\`.
 
             ⚠️ It is labeled \`[bot] pull request\` and is excluded from release notes and version bump logic."
-        env:
-          GH_TOKEN: ${{ steps.bot.outputs.token }}
