--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -41,4 +41,6 @@ jobs:
       # Repository name: peasy-lib
       # Workflow name: pypi-publish.yml
       - name: Publish to PyPI
-        uses: ./.github/actions/publish-to-pypi
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: 'dist'
